# fast_zero

./: .coverage  .gitignore  README.md  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 3f6004a5e329_create_users_table.py  46f50299a3db_create_users_table.py  a5960ffb81d2_create_users_table.py  a850ee5d86cb_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_db.py
